[metadata]
name = Python API Wrapper for the Market Access Intraday Power
summary = market access intraday power python wrapper
description-file = README.rst
author = Sebastien de Menten
author-email = sebastien.dementen@engie.com
home-page = https://github.com/engie-gems/marketaccess-intraday-power-python
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    marketaccess-intraday-power-python
# add datafile to be included in your distribution packages here, ex:
# data_files =
#   frontend = frontend/dist/*

# If your library has a CLI, define here the entry point
[entry_points]
console_scripts =
    marketaccess-intraday-power-python = marketaccess-intraday-power-python.main:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True

[wheel]
universal = 1

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[pep8]
max-line-length = 100

[tool:pytest]
mock_use_standalone_module = true
